--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,30 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
   --foreground: #171717;
+  --color: #171717;
+  --font-sans: 'Actor', sans-serif;
+  --font-jp: 'Noto Sans JP', 'Hiragino Sans', 'Meiryo', sans-serif;
 }
 
-@theme inline {
+:root {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-foreground: var(--color);
+  --en: var(--font-sans);
+  --jp: var(--font-jp);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --color: #ededed;
   }
-}
+} */
 
 body {
+  font-family: var(--font-sans);
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--color);
+  letter-spacing: 0.1rem;
 }
+
