--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
 :root {
+  --background: #ffffff;
   --foreground: #171717;
   --color: #171717;
   --font-sans: 'Actor', sans-serif;
