--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,14 @@ body {
   letter-spacing: 0.1rem;
 }
 
+@layer components {
+  .card {
+    box-shadow: 6px 6px 4px 0px rgba(0,0,0,0.18);
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
