--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,18 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #FFFCFC;
   --foreground: #171717;
   --color: #171717;
-  --font-sans: 'Actor', sans-serif;
-  --font-jp: 'Noto Sans JP', 'Hiragino Sans', 'Meiryo', sans-serif;
+  --active-color: #FF9233;
+  --font: 'Actor', sans-serif;
 }
 
 :root {
   --color-background: var(--background);
   --color-foreground: var(--color);
-  --en: var(--font-sans);
-  --jp: var(--font-jp);
+  --active-color: var(--active-color);
+  --font: var(--font);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -22,8 +22,8 @@
   }
 } */
 
-body {
-  font-family: var(--font-sans);
+html, body {
+  font-family: var(--font);
   background: var(--background);
   color: var(--color);
   letter-spacing: 0.1rem;
